--- a/App/public/assets/css/style.css
+++ b/App/public/assets/css/style.css
@@ -137,11 +137,13 @@ footer .outros-links-b h3,
 footer .apoio h3 {
     margin-bottom: 0.3rem;
     color: var(--azul-escuro);
+    font-weight: 600;
 }
 
 footer .outros-links-a a,
 .outros-links-b a {
     color: var(--branco);
+    font-weight: 500;
     text-decoration: none;
 }
 
@@ -154,6 +156,8 @@ footer .outros-links-b a:hover {
 footer .apoio {
     display: flex;
     flex-direction: column;
+    align-self: center;
+    gap: 0.5rem;
 }
 
 footer .apoio img {
@@ -166,6 +170,12 @@ footer .apoio img {
     PAGINA HOME
 ==================================================
 */
+
+.hero-bg {
+    width: 100%;
+    background-color: #DDEEF8;
+    padding: 1rem 0;
+}
 
 .hero {
     display: flex;
@@ -182,7 +192,6 @@ footer .apoio img {
     display: flex;
     flex-direction: column;
     width: 50%;
-    margin-top: 4rem;
 }
 
 .hero .hero-intro h1 {
@@ -206,7 +215,6 @@ footer .apoio img {
     justify-content: center;
     flex: 1;
     margin: 0 auto;
-    margin-top: 4rem;
 }
 
 .hero .hero-img img {
@@ -229,6 +237,7 @@ footer .apoio img {
     padding-right: 2rem;
     padding-left: 2rem;
     margin-bottom: 5rem;
+    margin-top: 2.5rem;
 }
 
 .sobre .sobre-info {
@@ -268,7 +277,7 @@ footer .apoio img {
 }
 
 .sobre .sobre-img img {
-    border-radius: 10px;
+    border-radius: var(--radius);
     width: 75%;
 }
 
@@ -309,7 +318,7 @@ footer .apoio img {
     flex-direction: column;
     padding: 3rem 1rem;
     margin-top: 2rem;
-    border-radius: 10px;
+    border-radius: var(--radius);
     border: none;
     font-size: 1.2rem;
 }
@@ -367,7 +376,7 @@ footer .apoio img {
 .como-funciona .card {
     width: 35vw;
     padding: 0.5rem;
-    border-radius: 10px;
+    border-radius: var(--radius);
     border: none;
 }
 
@@ -409,11 +418,12 @@ PAGINA CONTATOS
 */
 
 .contatos-container {
-    padding: 2rem;
+    padding: 5rem;
+    width: 100%;
     max-width: 1300px;
-    margin: 0 auto;
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
+    margin: 0 auto;
 }
 
 .contatos-redes {
@@ -442,7 +452,7 @@ PAGINA CONTATOS
 .contatos-email input.btn {
     border: none;
     color: #222222;
-    border-radius: 10px;
+    border-radius: var(--radius);
 }
 
 .contatos-email input.btn:hover {
@@ -490,8 +500,7 @@ PAGINA CONTATOS
 
 .contatos-mapa iframe {
     width: 100%;
-    border-radius: 10px;
-
+    border-radius: var(--radius);
 }
 
 /*
@@ -502,7 +511,7 @@ PAGINA CONTATOS
 .form-cliente-container {
     display: flex;
     justify-content: center;
-    padding-top: 6%;
+    padding: 20px;
 }
 
 .form-cliente {
@@ -516,7 +525,7 @@ PAGINA CONTATOS
     color: white;
     font-family: var(--font-destaque);
     font-weight: 500;
-    border-radius: 10px;
+    border-radius: var(--radius);
 }
 
 .form-cliente-side {
@@ -635,7 +644,7 @@ PAGINA CONTATOS
     justify-content: center;
     flex-direction: column;
     width: 30%;
-    border-radius: 10px;
+    border-radius: var(--radius);
     padding: 1rem 2rem;
     padding-top: 2rem;
     padding-bottom: 3rem;
@@ -783,7 +792,7 @@ PAGINA CONTATOS
     margin: 0 auto;
 
     background-color: var(--branco);
-    border-radius: 10px;
+    border-radius: var(--radius);
     box-shadow: var(--shadow-lg);
 
     padding: 2rem;
@@ -840,6 +849,7 @@ PAGINA CONTATOS
     display: flex;
     align-items: center;
 }
+
 .main-b h4 svg {
     width: 25px;
     height: 25px;
@@ -922,7 +932,7 @@ PAGINA CONTATOS
     width: 100%;
     height: 250px;
     object-fit: cover;
-    border-radius: 10px;
+    border-radius: var(--radius);
 }
 
 .lista-cuidadores .card-body {
@@ -1155,7 +1165,7 @@ PAGINA CONTATOS
     }
 
     .sobre .sobre-img img {
-        border-radius: 20PX;
+        border-radius: var(--radius);
         width: 100%;
 
     }
@@ -1410,7 +1420,7 @@ CONFIG TABLET    MEDIAS QUERY TABLET
         gap: 0;
         padding: 0 2rem;
         background-color: var(--azul-medio);
-        border-radius: 8px;
+        border-radius: var(--radius);
         color: white;
     }
 
@@ -1450,11 +1460,16 @@ CONFIG TABLET    MEDIAS QUERY TABLET
         width: 100%;
     }
 
-
     footer {
         flex-direction: column;
         gap: 20px;
         text-align: center;
+    }
+
+    footer .outros-links-a,
+    .outros-links-b {
+        flex-direction: column;
+        align-self: center;
     }
 
     /* =========================================================
@@ -1472,7 +1487,6 @@ CONFIG TABLET    MEDIAS QUERY TABLET
 
     .hero .hero-intro h1 {
         font-size: 2.1rem;
-        margin-top: 2rem;
     }
 
     .hero .hero-intro p {
@@ -1523,7 +1537,7 @@ CONFIG TABLET    MEDIAS QUERY TABLET
     ========================================================= */
     .contatos-container {
         flex-direction: column;
-        padding: 1.5remrem;
+        padding: 1.5rem;
     }
 
     .contatos-redes {
@@ -1542,7 +1556,7 @@ CONFIG TABLET    MEDIAS QUERY TABLET
 
     .contatos-mapa iframe {
         width: 100%;
-        border-radius: 20px;
+        border-radius: var(--radius);
     }
 
     /* =========================================================
@@ -1673,6 +1687,17 @@ CONFIG TABLET    MEDIAS QUERY TABLET
 
     .campo-dados {
         font-size: 1.5rem;
+    }
+
+    /*
+==================================================
+PAGINA LOGIN CELULARES @MEDIA QUERY
+==================================================
+*/
+
+    .form-login {
+        width: 80%;
+        margin-bottom: 4rem;
     }
 
 }
