--- a/App/public/assets/css/style.css
+++ b/App/public/assets/css/style.css
@@ -711,7 +711,6 @@ PAGINA CONTATOS
 }
 
 .sidebar-header {
-    /* ! tirar depois o padding */
     padding-top: 1rem;
     padding-bottom: 1rem;
     border-bottom: 1.5px solid var(--branco);
@@ -762,6 +761,11 @@ PAGINA CONTATOS
     padding: 1rem 0;
 }
 
+.sidebar-nome p {
+    margin: 0;
+    font-weight: 600;
+}
+
 .sidebar-baixo {
     border-top: var(--branco) 1.5px solid;
 }
@@ -770,8 +774,8 @@ PAGINA CONTATOS
     width: 45px;
     height: 45px;
     border-radius: 50%;
-    margin-left: 1rem;
     object-fit: cover;
+    margin-right: 0.5rem;
 }
 
 /* ! Main */
@@ -837,6 +841,11 @@ PAGINA CONTATOS
     width: 50%;
 }
 
+.main-b ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 .main-b h2 {
     border-bottom: 1px solid var(--preto2);
 }
@@ -865,39 +874,19 @@ PAGINA CONTATOS
     border-radius: var(--radius);
 }
 
-/* .card {
-    width: 30rem;
-}
-
-.show-data {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 40rem;
-    border: none;
-    padding: 2rem 5rem;
-}
-
-.show-data-mobile {
-    display: none;
-}
-
-.show-data iframe {
-    width: 100%;
-    height: 100%;
-    margin-bottom: 2rem;
-} */
-
 /*
 ==================================================
-    PAGINA DASHBOARD-CLIENTE
+    PAGINA dashboard
 ==================================================
 */
-.dashboard-cliente-container {
-    padding: 0rem 1rem;
-}
 
-.dashboard-cliente {
+/* 
+.dashboard-container {
+    
+} 
+*/
+
+.dashboard {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -910,7 +899,6 @@ PAGINA CONTATOS
     color: white;
     border: none;
 }
-
 
 
 /* --------------------------------------------- */
@@ -1278,18 +1266,18 @@ PAGINA LOGIN CELULARES @MEDIA QUERY
 
     /*
 ==================================================
-PAGINA DASHBOARD-CLIENTE CELULARES @MEDIA QUERY
+PAGINA dashboard CELULARES @MEDIA QUERY
 ==================================================
 */
-    .dashboard-cliente-container {
+    .dashboard-container {
         width: 100%;
     }
 
-    .dashboard-cliente .img-user {
+    .dashboard .img-user {
         flex-wrap: wrap;
     }
 
-    .dashboard-cliente .img-user h1 {
+    .dashboard .img-user h1 {
         font-size: 25px;
         text-align: center;
     }
@@ -1594,15 +1582,15 @@ CONFIG TABLET    MEDIAS QUERY TABLET
     ========================================================= */
 
     /* ==========  ========== */
-    .dashboard-cliente-container {
+    .dashboard-container {
         width: 100%;
     }
 
-    .dashboard-cliente .img-user {
+    .dashboard .img-user {
         flex-wrap: wrap;
     }
 
-    .dashboard-cliente .img-user h1 {
+    .dashboard .img-user h1 {
         font-size: 26px;
         text-align: center;
     }
