--- a/App/public/assets/css/style.css
+++ b/App/public/assets/css/style.css
@@ -691,9 +691,10 @@ PAGINA CONTATOS
 
 
 /* ! SIDEBAR */
+
 .flexdashboard {
     display: flex;
-    min-height: 100vh;
+    flex: 1;
 }
 
 .sidebar-dashboard {
@@ -784,6 +785,12 @@ PAGINA CONTATOS
     flex: 1;
     padding: 2rem;
     background-color: var(--branco2);
+    min-height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .main-dashboard h1 {
@@ -793,20 +800,22 @@ PAGINA CONTATOS
 
 .main-content {
     display: flex;
-    margin: 0 auto;
+    flex-wrap: wrap;
+    justify-content: center;
 
     background-color: var(--branco);
     border-radius: var(--radius);
     box-shadow: var(--shadow-lg);
 
+    max-width: 1400px;
+    width: 100%;
     padding: 2rem;
-    gap: 4rem;
+    gap: 1rem;
 }
 
 .main-a {
     gap: 1rem;
     width: 40%;
-    padding: 1rem;
 }
 
 .main-a,
@@ -846,7 +855,7 @@ PAGINA CONTATOS
     padding: 0;
 }
 
-.main-b h2 {
+.main-b h3 {
     border-bottom: 1px solid var(--preto2);
 }
 
@@ -872,6 +881,45 @@ PAGINA CONTATOS
     padding: 0.2rem;
     border: 1px solid var(--azul-medio);
     border-radius: var(--radius);
+}
+
+@media (max-width: 768px) {
+    .flexdashboard {
+        flex-direction: column;
+    }
+
+    .sidebar-dashboard {
+        width: 100%;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .main-dashboard {
+        padding: 1rem;
+    }
+
+    .main-content {
+        padding: 1.5rem;
+        margin: 1rem 0.5rem;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main-a,
+    .main-b {
+        width: 100%;
+        padding: 0.5rem;
+    }
+
+    .main-a img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .main-b span {
+        padding: 0.5rem;
+        margin-bottom: 0.75rem;
+    }
 }
 
 /*
