nova home atualizada

--- a/App/public/assets/css/global.css
+++ b/App/public/assets/css/global.css
@@ -48,6 +48,8 @@ ROOT
     /* TODO: ABAIXO A SER DEFINIDO AINDA */
     --shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     /* sombra padrao */
+    --shadow-light: 0 8px 20px rgba(0, 0, 0, 0.08);
+    /* sombra light */
     --shadow-hover: 0 8px 24px rgba(0, 0, 0, 0.12);
     /* sombra ao passar o mouse */
     --shadow-active: 0 2px 5px rgba(0, 0, 0, 0.2);
