--- a/App/public/assets/css/reset.css
+++ b/App/public/assets/css/reset.css
@@ -1,4 +1,3 @@
-
 /*
 =======================
     ! Reset base
@@ -85,18 +84,27 @@ ROOT
 
 :root {
     /** CORES **/
-    --azul-escuro: #5A7CA0; /* titulos */
-    --azul-medio: #7997B9; /* botoes principais */
-    --azul-claro: #D1E4F5; /* fundos */
+    --azul-escuro: #5A7CA0;
+    /* titulos */
+    --azul-medio: #7997B9;
+    /* botoes principais */
+    --azul-claro: #D1E4F5;
+    /* fundos */
 
-    --verde: #7FC7A7; /* cor de sucesso */
-    --amarelo: #F8A864; /* cor de alerta */
+    --verde: #7FC7A7;
+    /* cor de sucesso */
+    --amarelo: #F8A864;
+    /* cor de alerta */
 
-    --branco: #F8F9FA; /* fundo principal */
-    --branco2: #EBEBEB; /* fundo secundario */
+    --branco: #F8F9FA;
+    /* fundo principal */
+    --branco2: #EBEBEB;
+    /* fundo secundario */
 
-    --preto: #1F2A33; /* fonte p principal */
-    --preto2: #3D4346; /* fonte p secundaria */
+    --preto: #1F2A33;
+    /* fonte p principal */
+    --preto2: #3D4346;
+    /* fonte p secundaria */
 
     /** FONTES **/
     --font-padrao: "Nunito", sans-serif;
@@ -107,14 +115,19 @@ ROOT
     /* fonte da LOGO, nao repetir */
 
     /** OUTROS **/
-    --radius: 8px; /* radius padrao */
-    --transition: 0.3s ease-in-out; /* transicao padrao */
+    --radius: 8px;
+    /* radius padrao */
+    --transition: 0.3s ease-in-out;
+    /* transicao padrao */
 
 
 
     /* TODO: ABAIXO A SER DEFINIDO AINDA */
-    --shadow: 4px 0 5px rgba(0, 0, 0, 0.25);;
+    --shadow: 4px 0 5px rgba(0, 0, 0, 0.25);
     --shadow-lg: 4px 0 15px rgba(0, 0, 0, 0.35);
+    --shadow-light: 0 8px 20px rgba(0, 0, 0, 0.08);
+    --shadow-hover: 0 6px 18px rgba(0, 0, 0, 0.06);
+    
 }
 
 /*
@@ -132,25 +145,48 @@ body {
     margin: 0;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     font-family: var(--font-destaque);
     color: var(--preto1);
     margin-bottom: 0.5em;
 }
 
-h1 { font-size: 2.75rem; font-weight: 700;}
-h2 { font-size: 2.25rem; font-weight: 600; }
-h3 { font-size: 1.75rem; font-weight: 500; }
-h4 { font-size: 1.5rem; font-weight: 500; }
+h1 {
+    font-size: 2.75rem;
+    font-weight: 700;
+}
 
-p { margin-bottom: 1em; }
+h2 {
+    font-size: 2.25rem;
+    font-weight: 600;
+}
+
+h3 {
+    font-size: 1.75rem;
+    font-weight: 500;
+}
+
+h4 {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+p {
+    margin-bottom: 1em;
+}
 
 a {
     font-weight: 600;
     color: var(--azul-escuro);
     text-decoration: none;
 }
-a:hover { text-decoration: underline; }
+
+a:hover {
+    text-decoration: underline;
+}
 
 strong {
     font-weight: 700;
@@ -190,8 +226,8 @@ button:active {
 
 .containerglobal {
     width: 90%;
-  max-width: 1200px;
-  margin: auto;
+    max-width: 1200px;
+    margin: auto;
 }
 
 .grid {
@@ -210,9 +246,11 @@ button:active {
     h1 {
         font-size: 2rem;
     }
+
     h2 {
         font-size: 1.75rem;
     }
+
     h3 {
         font-size: 1.5rem;
     }
